php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #35316 Application exception on trying to create any COM object
Submitted: 2005-11-21 19:13 UTC Modified: 2005-11-27 13:23 UTC
Votes:2
Avg. Score:4.0 ± 1.0
Reproduced:2 of 2 (100.0%)
Same Version:1 (50.0%)
Same OS:1 (50.0%)
From: Jared dot Williams1 at ntlworld dot com Assigned: wez (profile)
Status: Closed Package: COM related
PHP Version: 5.1.0RC6 OS: Windows 2000
Private report: No CVE-ID: None
 [2005-11-21 19:13 UTC] Jared dot Williams1 at ntlworld dot com
Description:
------------
An application exception occurs when trying to create any COM object.


COM php.ini settings.. (all defaults)

Directive => Local Value => Master Value
com.allow_dcom => 0 => 0
com.autoregister_casesensitive => 1 => 1
com.autoregister_typelib => 0 => 0
com.autoregister_verbose => 0 => 0
com.code_page => no value => no value
com.typelib_file => no value => no value

Reproduce code:
---------------
php -r "$fso = new COM('Scripting.FileSystemObject'); $fso = NULL;"

php -r "$word = new COM('Word.Application'); $word = NULL;"

php -r "$connection = new COM('ADODB.Connection'); $connection = NULL;"  

Expected result:
----------------
Nothing.

Actual result:
--------------
---------------------------
php.exe - Application Error
---------------------------
The instruction at "0x100aa8dd" referenced memory at "0x000000f9". The memory could not be "read".


Click on OK to terminate the program
Click on CANCEL to debug the program
---------------------------
OK   Cancel   
---------------------------


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-11-22 10:06 UTC] sniper@php.net
Assigned to the maintainer.
 [2005-11-26 02:10 UTC] msisolak at yahoo dot com
I'm seeing the same behavior in the released PHP 5.1.0.
 [2005-11-26 02:37 UTC] msisolak at yahoo dot com
Here is the call stack I'm seeing at the crash point:

php5ts_debug.dll!zend_objects_destroy_object(_zend_object * object=0x00a5bef0, unsigned int handle=1, void * * * tsrm_ls=0x00912578)  Line 31 + 0x5
php5ts_debug.dll!zend_objects_store_del_ref(_zval_struct * zobject=0x00a5b708, void * * * tsrm_ls=0x00912578)  Line 163 + 0x16
php5ts_debug.dll!_zval_dtor_func(_zval_struct * zvalue=0x00a5b708, char * __zend_filename=0x1049b158, unsigned int __zend_lineno=35)  Line 52 + 0x13
php5ts_debug.dll!_zval_dtor(_zval_struct * zvalue=0x00a5b708, char * __zend_filename=0x104a2de8, unsigned int __zend_lineno=818)  Line 35 + 0x17
php5ts_debug.dll!zend_assign_to_variable(_znode * result=0x00a5c2b8, _znode * op1=0x00a5c2d0, _znode * op2=0x00a5c2e8, _zval_struct * value=0x00a5c468, int type=2, _temp_variable * Ts=0x00a5c408, void * * * tsrm_ls=0x00912578)  Line 818 + 0x19
php5ts_debug.dll!ZEND_ASSIGN_SPEC_CV_TMP_HANDLER(_zend_execute_data * execute_data=0x0012f9b4, void * * * tsrm_ls=0x00912578)  Line 22118 + 0x2b
php5ts_debug.dll!execute(_zend_op_array * op_array=0x00a5be28, void * * * tsrm_ls=0x00912578)  Line 88 + 0xf
php5ts_debug.dll!zend_eval_string(char * str=0x009124df, _zval_struct * retval_ptr=0x00000000, char * string_name=0x00418480, void * * * tsrm_ls=0x00912578)  Line 1056 + 0x10
php5ts_debug.dll!zend_eval_string_ex(char * str=0x009124df, _zval_struct * retval_ptr=0x00000000, char * string_name=0x00418480, int handle_exceptions=1, void * * * tsrm_ls=0x00912578)  Line 1090 + 0x15
php.exe!main(int argc=3, char * * argv=0x009124c8)  Line 1078 + 0x1f
php.exe!mainCRTStartup()  Line 398 + 0x11
kernel32.dll!7c816d4f()
kernel32.dll!7c8399f3()
 [2005-11-27 07:41 UTC] yoy at yoy dot com
Win Xp Pro
Apache 2
PHP 5.1.0

$conn=new COM('some_ActiveX_object.some_class');

I test it with ActiveX-exe/dll and still my apache crashe couse the error in php5ts.dll module.

with V5.0.4.4 I dont see any problem.
 [2005-11-27 13:23 UTC] rrichards@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 14:00:01 2026 UTC