Fixed bug #35316 (Application exception trying to create COM object)